force-app/main/default/objects/Integration_Patients__c/Integration_Patients__c.object-meta.xml
<CustomObject>
    <label>Integration Patients</label>
    <nameField>
        <label>IntegrationPatients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>