force-app/main/default/objects/Integration_Patients__c/fields/AGEU__c.field-meta.xml
<CustomField>
    <fullName>AGEU__c</fullName>
    <label>AGEU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>