force-app/main/default/objects/Integration_Patients__c/fields/BRTHDTC__c.field-meta.xml
<CustomField>
    <fullName>BRTHDTC__c</fullName>
    <label>BRTHDTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>