force-app/main/default/objects/Integration_Patients__c/fields/ETHNIC__c.field-meta.xml
<CustomField>
    <fullName>ETHNIC__c</fullName>
    <label>ETHNIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>