force-app/main/default/objects/Integration_Patients__c/fields/INVNAM__c.field-meta.xml
<CustomField>
    <fullName>INVNAM__c</fullName>
    <label>INVNAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>