force-app/main/default/objects/Integration_Patients__c/fields/RACE__c.field-meta.xml
<CustomField>
    <fullName>RACE__c</fullName>
    <label>RACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>